--- a/WikiRobot.html
+++ b/WikiRobot.html
@@ -25,27 +25,67 @@
 </div>
 <h2>Supported Operations:</h2>
 <div class="support">
-    <h3>When in English:</h3>
+    <h2>When in English:</h2>
+    <h3>Main Menu</h3>
     <dl>
-        <dt>Volume up</dt>
-        <dd>Increase Volume by 4 (10 max)</dd>
-        <dt>Volume down</dt>
-        <dd>Decrease Volume by 4 (0 min)</dd>
+        <dt>Search for something</dt>
+        <dd>Enter search menu</dd>
+        <dt>Change settings</dt>
+        <dd>Enter setting menu</dd>
+    </dl>
+    <h3>Setting Menu</h3>
+    <dl>
+        <dt>Volume Up</dt>
+        <dd>Increase Volume by 3 (10 max)</dd>
+        <dt>Volume Down</dt>
+        <dd>Decrease Volume by 3 (0 min)</dd>
+        <dt>Pitch Up</dt>
+        <dd>Increase Pitch by 3 (10 max)</dd>
+        <dt>Pitch Down</dt>
+        <dd>Decrease Pitch by 3 (0 min)</dd>
         <dt>Switch to Chinese</dt>
         <dd>Switch speech and recognition language to Chinese</dd>
-        <dt>Search for something</dt>
+        <dt>Back</dt>
+        <dd>Back to main menu</dd>
+    </dl>
+    <h3>Search Menu</h3>
+    <dl>
+        <dt>Search for...</dt>
         <dd>Search and show a snippet from wikipedia</dd>
+        <dt>Back</dt>
+        <dd>Back to main menu</dd>
     </dl>
 </div>
 <div class="support">
-    <h3>中文时 (When in Chinese):</h3>
+    <h2>中文时 (When in Chinese):</h2>
+    <h3>主菜单(Main Menu)</h3>
+    <dl>
+        <dt>搜索</dt>
+        <dd>进入搜索菜单 (Search for something)</dd>
+        <dt>更改设置</dt>
+        <dd>进入设置菜单 (Change settings)</dd>
+    </dl>
+    <h3>设置菜单(Setting Menu)</h3>
     <dl>
         <dt>增加音量</dt>
-        <dd>增加4音量 (最大为10) (Volume up)</dd>
+        <dd>增加3音量 (最大为10) (Volume up)</dd>
         <dt>减小音量</dt>
-        <dd>减少4音量 (最小为0) (Volume down)</dd>
+        <dd>减少3音量 (最小为0) (Volume down)</dd>
+        <dt>增加音调</dt>
+        <dd>增加3音调 (最大为10) (Pitch up)</dd>
+        <dt>减小音调</dt>
+        <dd>减小3音调 (最小为0) (Pitch down)</dd>
         <dt>使用英文</dt>
         <dd>切换朗读和识别语言为英文 (Switch to English)</dd>
+        <dt>返回</dt>
+        <dd>返回主菜单(back)</dd>
+    </dl>
+    <h3>搜索菜单(Search Menu)</h3>
+    <dl>
+        <dt>搜索……</dt>
+        <dd>搜索条目 (Search for...)</dd>
+        <dt>返回</dt>
+        <dd>返回主菜单(back)</dd>
     </dl>
 </div>
 </body>
@@ -56,10 +96,25 @@
     const Menu = {
         MAIN: 0,
         SETTING: 1,
-        SEARCH: 2
+        SEARCH: 2,
+        CONFIRM: 3
     };
 
+    const Prompts = {
+        MAIN: 'main menu, do you want to search for something or change settings',
+        SETTING: 'What setting do you want to change, you can volume up, volume down, pitch up, pitch down or switch to chinese. Or say back to go to the main menu',
+        SEARCH: 'What do you want to search for? Or say back to go to the main menu'
+    }
+
+    const ChinesePrompts = {
+        MAIN: '主菜单，请选择搜索还是更改设置',
+        SETTING: '选择增加音量，减小音量, 增加音调，减小音调或者使用英文, 说返回能返回主菜单',
+        SEARCH: '你想搜索什么? 说返回能返回主菜单'
+    }
+
     var menu = Menu.MAIN;
+
+    var search = '';
 
     // When we hear a word or a phrase
     listening.onresult = function(event) {
@@ -110,7 +165,7 @@
             listening.lang = 'en-US';
             speaking.lang = 'en-US';
             menu = Menu.MAIN;
-            setReply('Switch to English, please choose search for something or change setting');
+            setReply('Switch to English, please choose search for something or change settings');
         }
     }
 
@@ -161,6 +216,9 @@
             case Menu.SEARCH:
                 executeSearch(command);
                 break;
+            case Menu.CONFIRM:
+                executeConfirm(command);
+                break;
             default:
                 failToRecognize();
         }
@@ -171,12 +229,12 @@
             case 'search for something':
             case '搜索':
                 menu = Menu.SEARCH;
-                setInterationalReply('What do you want to search for? Or say back to go to the previous menu', '你想搜索什么? 说返回能返回主菜单');
+                setInterationalReply(Prompts.SEARCH, ChinesePrompts.SEARCH);
                 break;
             case 'change settings':
             case '更改设置':
                 menu = Menu.SETTING;
-                setInterationalReply('What setting do you want to change, you can volume up, volume down or switch to chinese. Or say back to go to the previous menu', '选择增加音量，减小音量或者使用英文, 说返回能返回主菜单');
+                setInterationalReply(Prompts.SETTING, ChinesePrompts.SETTING);
                 break;
             default:
                 failToRecognize();
@@ -194,6 +252,14 @@
             case '减小音量':
                 volumeDown();
                 break;
+            case 'pitch up':
+            case '增加音调':
+                pitchUp();
+                break;
+            case 'pitch down':
+            case '减小音调':
+                pitchDown();
+                break;
             case 'switch to chinese':
             case '使用英文':
                 toggleLanguage();
@@ -201,7 +267,7 @@
             case 'back':
             case '返回':
                 menu = Menu.MAIN;
-                setInterationalReply('main menu, do you want to search for something or change settings', '主菜单，请选择搜索还是更改设置');
+                setInterationalReply(Prompts.MAIN, ChinesePrompts.MAIN);
                 break;
             default:
                 failToRecognize();
@@ -213,16 +279,32 @@
         var searchPrefix = 'search for ';
         var searchPrefixChinese = '搜索';
         if (isEnglish() && command.startsWith(searchPrefix)) {
-            searchWiki(command.substr(searchPrefix.length), true);
+            search = command.substr(searchPrefix.length);
+            setReply('Okay, You want to search for ' + search + ' is that correct? Answer yes or correct to continue');
+            menu = Menu.CONFIRM;
         } else if (!isEnglish() && command.startsWith(searchPrefixChinese)) {
-            searchWiki(command.substr(searchPrefixChinese.length), false);
+            search = command.substr(searchPrefixChinese.length);
+            setReply('好的，你想搜索' + search + ' 对吗? 回答是或者好继续');
+            menu = Menu.CONFIRM;
         } else {
             if (command == 'back' || command == '返回') {
                 menu = Menu.MAIN;
-                setInterationalReply('main menu, do you want to search for something or change settings', '主菜单，请选择搜索还是更改设置');
+                setInterationalReply(Prompts.MAIN, ChinesePrompts.MAIN);
             } else {
                 failToRecognize();
             }
+        }
+        speak();
+    }
+
+    function executeConfirm(command) {
+        menu = Menu.SEARCH;
+        if (isEnglish() && (command == 'yes' || command == 'correct')) {
+            searchWiki(search, true);
+        } else if (!isEnglish() && (command == '是' || command == '好')) {
+            searchWiki(search, false);
+        } else {
+            setInterationalReply('What do you want to search for? Or say back to go to the previous menu', ChinesePrompts.SEARCH);
             speak();
         }
     }
@@ -247,36 +329,73 @@
 
     // From 0 to 10
     function volumeUp() {
-        var volume = setVolume(getVolume() + 4);
+        var volume = setVolume(getVolume() + 3);
         if (volume >= 10) {
-            setInterationalReply('Volume maxed (10)', '音量已经最大 (10)');
+            setInterationalReply('Volume maxed (10)' + Prompts.SETTING, '音量已经最大 (10)' + ChinesePrompts.SETTING);
         } else {
-            setInterationalReply('Volume is set to ' + volume, '音量设为' + volume);
+            setInterationalReply('Volume is set to ' + volume + Prompts.SETTING, '音量设为' + volume + ChinesePrompts.SETTING);
         }
     }
 
     // From 10 to 0
     function volumeDown() {
-        var volume = setVolume(getVolume() - 4);
+        var volume = setVolume(getVolume() - 3);
         if (volume <= 0) {
-            setInterationalReply('Muted (0)', '静音 (0)');
+            setInterationalReply('Muted (0)' + Prompts.SETTING, '静音 (0)' + ChinesePrompts.SETTING);
         } else {
-            setInterationalReply('Volume is set to ' + volume, '音量设为' + volume);
+            setInterationalReply('Volume is set to ' + volume + Prompts.SETTING, '音量设为' + volume + ChinesePrompts.SETTING);
+        }
+    }
+
+    // Map from 0 - 2 to 0 - 10
+    function setPitch(value) {
+        if (value >= 10) {
+            speaking.pitch = 2;
+            return 10;
+        } else if (value <= 0) {
+            speaking.pitch = 0;
+            return 0;
+        } else {
+            speaking.pitch = value / 5;
+            return value;
+        }
+    }
+
+    function getPitch() {
+        return Math.round(speaking.pitch * 5);
+    }
+
+    // From 0 to 10
+    function pitchUp() {
+        var pitch = setPitch(getPitch() + 3);
+        if (pitch >= 10) {
+            setInterationalReply('Pitch maxed (10)' + Prompts.SETTING, '音调已经最大 (10)' + ChinesePrompts.SETTING);
+        } else {
+            setInterationalReply('Pitch is set to ' + pitch + Prompts.SETTING, '音调设为' + pitch + ChinesePrompts.SETTING);
+        }
+    }
+
+    // From 10 to 0
+    function pitchDown() {
+        var pitch = setPitch(getPitch() - 3);
+        if (pitch <= 0) {
+            setInterationalReply('Pitch mined (0)' + Prompts.SETTING, '音调已经最小 (0)' + ChinesePrompts.SETTING);
+        } else {
+            setInterationalReply('Pitch is set to ' + pitch + Prompts.SETTING, '音调设为' + pitch + ChinesePrompts.SETTING);
         }
     }
 
     function failToRecognize() {
         switch (menu) {
             case Menu.MAIN:
-                setInterationalReply('Failed to recognize, please choose search for something or change setting', '识别失败，请选择搜索或者更改设置');
+                setInterationalReply('Failed to recognize, please choose search for something or change settings', '识别失败，请选择搜索或者更改设置');
                 break;
             case Menu.SETTING:
-                setInterationalReply('Failed to recognize, what setting do you want to change, you can volume up, volume down or switch to chinese', '识别失败，请选择增加音量，减小音量或者使用英文, 说返回能返回主菜单');
+                setInterationalReply('Failed to recognize ' + Prompts.SETTING, '识别失败, ' + ChinesePrompts.SETTING);
                 break;
             case Menu.SEARCH:
-                setInterationalReply('Failed to recognize, please choose search for something', '识别失败，你想搜索什么, 说返回能返回主菜单');
+                setInterationalReply('Failed to recognize, please choose search for something or say back to go to the main menu.', '识别失败，你想搜索什么, 说返回能返回主菜单');
                 break;
-
         }
     }
 
@@ -317,8 +436,8 @@
         speaking.voiceURI = 'native';
         speaking.lang = 'en-US';
         setVolume(5);
-        speaking.rate = 1; // 0.1 to 10
-        speaking.pitch = 2; //0 to 2
+        setPitch(5);
+        speaking.rate = 1.2; // 0.1 to 10
         speak();
     });
 </script>
